# markitdown-server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.hub.yml  docker-compose.yml  docker-hub-readme.md  docker-push-options.md  docker-setup.md  example_base64_usage.py  main.py  push-multiarch-dockerhub.sh  push-to-dockerhub.sh  pyproject.toml  requirements.txt  summary.md  test-docker-deployment.sh  test-multiarch-build.sh  test_base64.py  test_detection_vs_support.py  test_enhanced_formats.py  test_formats.py  test_manual.py  test_pdf.py  test_server.py  tmp_run_markitdown.py  uv.toml
documents/: Analisi consumi I semestre 2024.xlsx  Dipendenti e P.iva.xlsx  test.docx
scripts/: process_documents.sh  push-docker-variants.sh  start_service.sh
src/markitdown_server/: __init__.py  extensions.py  logging.py  main.py
tests/: test_api_contract.py  test_logging.py
