[project]
name = "markitdown-server"
version = "0.2.0"
description = "FastAPI service for converting documents to Markdown using MarkItDown."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.8",
    "uvicorn[standard]>=0.40.0",
    "markitdown[all]>=0.1.5",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.28.1",
]

[project.scripts]
markitdown-server = "markitdown_server.main:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
